--- a/iOSBootcamp-Final-Project/Module/Home/View/Components/TipsCell/TipsCategoriesTableCell/TipsCategoriesColCell.xib
+++ b/iOSBootcamp-Final-Project/Module/Home/View/Components/TipsCell/TipsCategoriesTableCell/TipsCategoriesColCell.xib
@@ -29,10 +29,10 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="MLK-Z1-V5c">
-                                <rect key="frame" x="15" y="53.5" width="107" height="109"/>
+                                <rect key="frame" x="15" y="53.5" width="170.5" height="109"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DZE-f8-vXL">
-                                        <rect key="frame" x="0.0" y="0.0" width="107" height="31"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="170.5" height="31"/>
                                         <color key="backgroundColor" red="0.9643402099609375" green="0.9643402099609375" blue="0.9643402099609375" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <color key="tintColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <inset key="contentEdgeInsets" minX="-22" minY="0.0" maxX="0.0" maxY="0.0"/>
@@ -42,29 +42,28 @@
                                             <color key="titleColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <imageReference key="image" image="chevron.right" catalog="system" symbolScale="small"/>
                                         </state>
-                                        <buttonConfiguration key="configuration" style="plain" imagePlacement="trailing" title="Button" imagePadding="32">
+                                        <buttonConfiguration key="configuration" style="plain" imagePlacement="trailing" title="Kesehatan Anak" imagePadding="32">
                                             <imageReference key="image" image="chevron.right" catalog="system" symbolScale="small"/>
                                             <color key="baseForegroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </buttonConfiguration>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mJu-uL-m02">
-                                        <rect key="frame" x="0.0" y="39" width="107" height="31"/>
+                                        <rect key="frame" x="0.0" y="39" width="170.5" height="31"/>
                                         <color key="backgroundColor" red="0.96434021000000003" green="0.96434021000000003" blue="0.96434021000000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <color key="tintColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <inset key="contentEdgeInsets" minX="-22" minY="0.0" maxX="0.0" maxY="0.0"/>
                                         <inset key="titleEdgeInsets" minX="45" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                         <state key="normal" title="Button">
                                             <color key="titleColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <imageReference key="image" image="chevron.right" catalog="system" symbolScale="small"/>
                                         </state>
-                                        <buttonConfiguration key="configuration" style="plain" imagePlacement="trailing" title="Button" imagePadding="32">
+                                        <buttonConfiguration key="configuration" style="plain" imagePlacement="trailing" title="Gizi Nutrisi Anak" imagePadding="32">
                                             <imageReference key="image" image="chevron.right" catalog="system" symbolScale="small"/>
                                             <color key="baseForegroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </buttonConfiguration>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="io5-xA-HKp">
-                                        <rect key="frame" x="0.0" y="78" width="107" height="31"/>
+                                        <rect key="frame" x="0.0" y="78" width="170.5" height="31"/>
                                         <color key="backgroundColor" red="0.96434021000000003" green="0.96434021000000003" blue="0.96434021000000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <color key="tintColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <inset key="contentEdgeInsets" minX="-22" minY="0.0" maxX="0.0" maxY="0.0"/>
@@ -74,7 +73,7 @@
                                             <color key="titleColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <imageReference key="image" image="chevron.right" catalog="system" symbolScale="small"/>
                                         </state>
-                                        <buttonConfiguration key="configuration" style="plain" imagePlacement="trailing" title="Button" imagePadding="32">
+                                        <buttonConfiguration key="configuration" style="plain" imagePlacement="trailing" title="Info Parenting" imagePadding="48">
                                             <imageReference key="image" image="chevron.right" catalog="system" symbolScale="small"/>
                                             <color key="baseForegroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </buttonConfiguration>
