--- a/iOSBootcamp-Final-Project/Module/Home/View/Components/TipsCell/TopThreeTipsTableCell/TopThreeTipsTableCell.xib
+++ b/iOSBootcamp-Final-Project/Module/Home/View/Components/TipsCell/TopThreeTipsTableCell/TopThreeTipsTableCell.xib
@@ -31,8 +31,8 @@
                                             <constraint firstAttribute="width" constant="118" id="ci8-bo-1lD"/>
                                         </constraints>
                                     </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S5F-Xl-LBC">
-                                        <rect key="frame" x="148" y="10" width="31" height="15"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Diet &amp; Nutrisi" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S5F-Xl-LBC">
+                                        <rect key="frame" x="148" y="10" width="74" height="15"/>
                                         <fontDescription key="fontDescription" type="system" weight="light" pointSize="12"/>
                                         <color key="textColor" red="1" green="0.40263433851704644" blue="0.23093431394035546" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <nil key="highlightedColor"/>
